discussion/kv_engine/172444/172444_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51373: Inspect and correct Item objects created by KVStore

Create a function that Couch/Magma-KVStore should call when
they have created an Item from the underlying stored data.
The function inspects the Item for datatype anomalies and if
found logs and corrects the Item preventing exceptions
occurring further up the stack.

In this case we check for an Item with no value, but a datatype,
which in the case of datatype=xattr can cause faults in xattr
inspection code.

Change-Id: I10b87297797c920a52a5a2e6a186b406850ae978

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-03-17 16:32:15.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-17 16:39:55.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44509/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44509/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37470/ : ABORTED

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/kvstore.cc:653:21:
error: no member named "UserDataView" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37470/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37470/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5712/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5770/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5770/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17823/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17823/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16894/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16894/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18144/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18144/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18855/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18855/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26230/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26230/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16055/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore.cc:653:21: error: no member named "UserDataView" in namespace "cb" [clang-diagnostic-error]
                cb::UserDataView(ss.str()).getSanitizedValue());
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:274:49: note: expanded from macro "EP_LOG_WARN"
    EP_LOG_FMT(spdlog::level::level_enum::warn, __VA_ARGS__)
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:235:58: note: expanded from macro "EP_LOG_FMT"
            logger->log(severity, CHECK_FMT_STRING(fmt), __VA_ARGS__); \
                                                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16055/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore.cc:653:21:
error: no member named "UserDataView" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16055/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14975/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
